--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     color: #333;
-    font-family: "Arial";
+    font-family: courier;
     text-align: center;
     margin: 0;
     padding: 0;
