--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 body
 {
-    color: grey;
+    background: #1e1f24;
+    color: #333;
     font-family: "Arial";
     font-size: 16px;
     text-align: center;
@@ -10,13 +11,19 @@ body
 
 #cabecera
 {
-    background-color: #33a;
+    background-color: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -39,4 +46,10 @@ body
 #container h1
 {
     font-size:  20px;
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
